--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -12,5 +12,5 @@ $secondary-light:#5472d3;
 $on-secondary:#fff;
 $error:#f44336;
 $on-error:#fff;
-$sucess:#4caf50;
-$on-sucess:#fff;
+$success:#4caf50;
+$on-success:#fff;
