--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,25 +1,57 @@
+<h2>Actions</h2>
+<app-button (click)="onToggleSpinner()">Toogle Spinner</app-button>
+<app-button (click)="onError()">Error</app-button>
+<app-button (click)="onSuccess()">Success</app-button>
+
+<br>
+<br>
+<br>
+
 <h2>Formularios de Angular</h2>
 
+<div class="wrapper">
 
+    <app-spinner *ngIf="showSpinner"></app-spinner>
 
-<form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
-    <app-form-field label="Input Pablo" [patternError]="regexError.number" [required]="true" [control]="form.controls['input']" [isInline]="isInline">
-        <app-input formControlName="input"></app-input>
-    </app-form-field>
+    <form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
+        <app-form-field label="Input Pablo" [patternError]="regexError.number" [required]="true" [control]="form.controls['input']" [isInline]="isInline">
+            <app-input formControlName="input"></app-input>
+        </app-form-field>
 
-    <app-form-field label="Password" [required]="true" [control]="form.controls['password']" [isInline]="isInline">
-        <app-password formControlName="password"></app-password>
-    </app-form-field>
+        <app-form-field label="Password" [required]="true" [control]="form.controls['password']" [isInline]="isInline">
+            <app-password formControlName="password"></app-password>
+        </app-form-field>
 
+        <app-form-field label="Autocomplete" [required]="true" [control]="form.controls['autocomplete']" [isInline]="isInline">
+            <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
+        </app-form-field>
 
-    <app-form-field label="Select" [required]="true" [control]="form.controls['select']" [isInline]="isInline">
-        <app-select formControlName="select" [items]="items"></app-select>
-    </app-form-field>
+        <app-form-field label="Select" [required]="true" [control]="form.controls['select']" [isInline]="isInline">
+            <app-select formControlName="select" [items]="items"></app-select>
+        </app-form-field>
 
+        <app-form-field label="Checkboxes" [required]="true" [control]="form.controls['checkboxes']" [isInline]="isInline">
+            <app-checkboxes formControlName="checkboxes" [items]="items"></app-checkboxes>
+        </app-form-field>
 
-    <br>
-    <br>
-    <app-button (click)="organizarElemento()">Organizar elemento</app-button>
-    <app-button (click)="onPatchValue()">Agregar texto</app-button>
+        <app-form-field label="Radios" [required]="true" [control]="form.controls['radios']" [isInline]="isInline">
+            <app-radios formControlName="radios" [items]="items"></app-radios>
+        </app-form-field>
 
-</form>
+        <app-form-field label="Date" [required]="true" [control]="form.controls['date']" [isInline]="isInline">
+            <app-date formControlName="date"></app-date>
+        </app-form-field>
+
+        <app-form-field label="DateRange" [required]="true" [control]="form.controls['dateRange']" [isInline]="isInline">
+            <app-date-range formControlName="dateRange"></app-date-range>
+        </app-form-field>
+
+        <br>
+        <br>
+        <app-button type="submit">Submit</app-button>
+        <app-button (click)="organizarElemento()">Organizar elemento</app-button>
+        <app-button (click)="onPatchValue()">Agregar texto</app-button>
+        <app-button (click)="onToggleDisable()">Disabled</app-button>
+
+    </form>
+</div>
