--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,22 @@
 <div class="header">
-    <div class="header__title">Ecommerce Pablo</div>
-    <div class="header__navigation">
-        <a class="app-a" routerLink="demo" routerLinkActive="app-a_active">Demo</a>
+  <div class="header__title">Ecommerce Pablo</div>
+  <div class="header__navigation">
+    <div *ngIf="!isAuthorized">
+      <a
+        class="app-a"
+        routerLink="auth/registration"
+        routerLinkActive="app-a_active"
+        >Registrar</a
+      >
+      <a class="app-a" routerLink="auth/login" routerLinkActive="app-a_active"
+        >Login</a
+      >
     </div>
+
+    <a class="app-a" routerLink="demo" routerLinkActive="app-a_active">Demo</a>
+
+    <div *ngIf="isAuthorized">
+      <a class="app-a" (click)="onSingOut()">Salir sesion</a>
+    </div>
+  </div>
 </div>
